--- a/01-HTML-CSS/09-animations/group7_Shay_Jhon_Omri/shay/style.scss
+++ b/01-HTML-CSS/09-animations/group7_Shay_Jhon_Omri/shay/style.scss
@@ -6,7 +6,8 @@
         font-family: 'Roboto', sans-serif;
        max-height: 50vh;
        .main{
-       text-align: center;
+       justify-content: center;
+       margin: auto;
        }
     }
         .header{
@@ -22,6 +23,7 @@
                 grid-row: 2;
             }
             .fa-pen{
+                
                 grid-column: 16;
                 color: #25404e;
                 grid-row: 2;
@@ -465,8 +467,83 @@
 
 
     }
+    
 }
+.wrapper{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3,1fr);
+    grid-column-gap: 10px;
+    grid-row-gap: 10px;
+    height: 20vh;
+    color: rgb(228, 228, 228);  
 
+    .fas{
+      font-size: 400px;
+      color: violet;
+    }
+    &__city {
+      grid-column: 1;
+      grid-row: 1;
+  
+      h1{ 
+          left:50px;
+       }
+    }
+    &__photo {
+      grid-column: 2;
+      grid-row: 1/3
+      
+    }
+    &__degrees {
+      grid-column:1;
+      grid-row: 2;
+      
+    }
+    &__weather {
+      grid-column-start: 1;
+      grid-column-end: 1;
+      grid-row-start: 3;
+      background-color: rgb(119, 42, 182);
+      width: 120px;
+      border-radius: 30%;
+      color: white;
+      
+  
+    }
+    
+    
+  }
+  
+  .weatherBar{
+    display: flex;
+    height: 5vh;
+    width: 80vw;
+    background-color: transparent;
+    position: absolute;
+    top: 60vh;
+    justify-content: space-between;
+    color: white;
+  }
+  .hours{
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
+    grid-template-rows: repeat(3,1fr);
+    grid-row-gap: 10px;
+    position: relative;
+    top: 600px;
+    color: white;
+  }
+  .days{
+    display: grid;
+    grid-template-columns: 3fr 2fr 1fr 1fr;
+    grid-template-rows: repeat(3,1fr);
+    font-size: x-large;
+    position: relative;
+    color: white;
+    top:700px;
+    grid-row-gap: 10px;
+  }
 @keyframes rorate{
     from { 
         transform: rotate(0deg); 
@@ -515,8 +592,8 @@
       grid-template-columns: repeat(2,200px);
     grid-template-rows: repeat(3, 1fr);
       gap: 5px;
-      padding-left: 80px;
-          max-width: 600px;
+      margin-left: auto;
+      justify-content: center;
             max-height: 600px;
           &__box{
  
@@ -863,5 +940,139 @@
     grid-template-columns: repeat(4, 1fr);
 
 }
+.details {
+    background: rgba(19, 27, 36, 0.877);
+    max-width: 600px;
+    margin: auto;
+    display: grid;
+    grid-template-columns: 6fr;
+    grid-template-rows: 0.8fr 1.6fr 0.8fr 0.3fr 1fr 1fr;
+    color: honeydew;
 
+
+    &__location {
+        margin-top: 20px;
+        display: grid;
+        grid-template-rows: repeat(2 1fr);
+
+        .fas {
+            color: gray;
+            margin: auto;
+        }
+
+        p {
+            justify-self: center;
+            margin-top: -10px;
+        }
+
+    }
+
+    &__dayTime {
+        display: flex;
+        flex-direction: column;
+        //border: black solid 1px;
+
+        .ball {
+            width: 150px;
+            height: 150px;
+            border-radius: 100px;
+            background-image: linear-gradient(to bottom right, rgb(16, 176, 250), rgba(247, 0, 255, 0.932));
+            margin: auto;
+            animation-name: rorate;
+            animation-duration: 3s;
+            animation-delay: 1s;
+            animation-iteration-count: infinite;
+            animation-direction: reverse;
+            animation-timing-function: ease-in-out;
+        }
+
+
+        .card {
+            width: 100px;
+            height: 20px;
+            text-align: center;
+            padding: 0.5%;
+            border-radius: 40px;
+            margin: auto;
+            background: rgba(124, 49, 223, 0.295);
+        }
+    }
+
+    &__temp {
+        justify-self: center;
+        font-size: 3rem;
+    }
+
+    &__current {
+        display: flex;
+        justify-content: center;
+        gap: 30px;
+
+        .data {
+            justify-content: center;
+
+            span {
+                margin-left: 10px;
+            }
+        }
+
+        .fas {
+            color: cornflowerblue;
+        }
+    }
+
+    &__general {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: repeat(3 1fr);
+        margin: 0% 15%;
+
+        .measure {
+
+            &_units {
+                justify-self: end;
+                color: rgb(51, 89, 158);
+
+                .fas {
+                    color: honeydew;
+                    font-size: 12px;
+                }
+
+                span {
+                    margin-right: 10px;
+                }
+            }
+        }
+
+
+
+    }
+    
+}
+}
+@media only screen and(max-width:350px){
+  .main{
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: 1fr;
+    .header{
+        margin: auto;
+        padding-top: 10px;
+        display: grid;
+        grid-template-columns: repeat(4, 100px);
+        grid-template-rows: repeat(3, 50px);
+        max-width: 800px;
+    .fa-pen{
+        grid-column: 4;
+        color: #25404e;
+        grid-row: 2;
+    }
+}
+.contain{
+    
+    margin: auto;
+    justify-content: center;
+          //max-height: 700px;
+}
+}
 }
