--- a/01-HTML-CSS/09-animations/group7_Shay_Jhon_Omri/shay/style.scss
+++ b/01-HTML-CSS/09-animations/group7_Shay_Jhon_Omri/shay/style.scss
@@ -4,7 +4,6 @@
         background-color: 
         #081b25;
         font-family: 'Roboto', sans-serif;
-       max-height: 50vh;
        .main{
        justify-content: center;
        margin: auto;
@@ -12,28 +11,27 @@
     }
         .header{
             margin: auto;
-            padding-top: 10px;
             display: grid;
-            grid-template-columns: repeat(29, 50px);
-            grid-template-rows: repeat(3, 50px);
+            grid-template-columns: repeat(3, 1fr);
+            grid-template-rows: 1fr;
             max-width: 800px;
             .fa-search{
                 color: #25404e;
-                grid-column: 2;
-                grid-row: 2;
+                grid-column: 1;
+                grid-row: 1;
             }
             .fa-pen{
                 
                 grid-column: 16;
                 color: #25404e;
-                grid-row: 2;
+                grid-row: 1;
             }
    
         
      
             p{
-                grid-row: 2;
-                grid-column: 5;
+                grid-row: 1;
+                grid-column: 2;
                 color: #25404e;
                 font-size: 18px;
             }
@@ -553,43 +551,46 @@
 
 }
 @media only screen and(max-width:600px){
-    body{
-        max-width: 600px;
-        background-color: 
-        #081b25;
-        font-family: 'Roboto', sans-serif;
-       max-height: 100vh;
-    }
-    
+
+    .main{
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 0.6fr 3fr 0.6fr;
+        
         .header{
-            padding-top: 10px;
+            
             display: grid;
-            grid-template-columns: repeat(12, 50px);
-            grid-template-rows: repeat(3, 50px);
-          
+            grid-template-columns: 5fr 1fr;
+           grid-template-rows: 1fr;
+          &__icon{
+             
+
             .fa-search{
                 color: #25404e;
-                grid-column: 2;
-                grid-row: 2;
-            }
-            .fa-pen{
-                grid-column: 11;
-                color: #25404e;
-                grid-row: 2;
-            }
-        
-     
-            p{
-                grid-row: 2;
-                grid-column: 4;
+                grid-column: 1;
+                display: grid;
+                
+                   span{
+                
+                grid-column: 3;
                 color: #25404e;
                 font-size: 18px;
             }
-          
+            }
+            .fa-pen{
+                grid-column: 10;
+                color: #25404e;
+              
+              
+            }
+        
+     
+        
+          }
         }
           .contain{
       display: grid;
-      grid-template-columns: repeat(2,200px);
+      grid-template-columns: repeat(2,1fr);
     grid-template-rows: repeat(3, 1fr);
       gap: 5px;
       margin-left: auto;
@@ -939,7 +940,7 @@
     display: grid;
     grid-template-columns: repeat(4, 1fr);
 
-}
+}}
 .details {
     background: rgba(19, 27, 36, 0.877);
     max-width: 600px;
@@ -1059,7 +1060,7 @@
         margin: auto;
         padding-top: 10px;
         display: grid;
-        grid-template-columns: repeat(4, 100px);
+        grid-template-columns: repeat(3, 1fr);
         grid-template-rows: repeat(3, 50px);
         max-width: 800px;
     .fa-pen{
