--- a/01-HTML-CSS/09-animations/mishaschedule/_activitiesGrid.scss
+++ b/01-HTML-CSS/09-animations/mishaschedule/_activitiesGrid.scss
@@ -178,10 +178,10 @@
       padding: 3% 3%;
     }
 
-    &__goalsDiagram {
+    .goalsDiagram {
       @include flexSpaceEvenly;
-
-      &__circl {
+      
+      .circl {
         @include flexCenter;
 
         &--Text {
@@ -405,5 +405,7 @@
 
     }
   }
+
+  
 
 }
