--- a/01-HTML-CSS/09-animations/mishaschedule/activities.scss
+++ b/01-HTML-CSS/09-animations/mishaschedule/activities.scss
@@ -1,7 +1,7 @@
 @import './var';
 @import './mixin';
-@import './activitiesGrid';
-@import './userBar';
+// @import './activitiesGrid';
+// @import './userBar';
 
 
 html {
@@ -10,14 +10,16 @@ html {
 }
 
 
-.bodyActivities{
+.bodyActivities {
   background: $bgcolor;
+  background-size: cover;
   width: 60%;
   display: block;
   margin-left: auto;
   margin-right: auto;
   border-radius: 15px;
   box-shadow: $shadow2;
+  // padding: 0;
 
   &__topIcons {
     width: 98%;
@@ -33,13 +35,13 @@ html {
     width: 60%;
     margin-left: auto;
     margin-right: auto;
-  
+
     input {
       border-radius: 30px;
       @include inputBar1024;
       width: 95%;
     }
-  
+
     ion-icon {
       position: absolute;
       top: 18.5%;
@@ -49,18 +51,18 @@ html {
 
   &__navBar {
     width: 100%;
-  
+
     &__list {
       list-style: none;
       @include flexSpaceBetween;
       margin: 2.5% 3.5% 2% 0%;
-  
+
       &--link {
         text-decoration: none;
         padding: 0.2em 0.7em;
         color: $fontColor;
         font-size: 1.1em;
-  
+
         &:hover {
           background: rgb(102, 51, 160);
           color: white;
@@ -68,10 +70,459 @@ html {
           cursor: pointer;
           border-radius: 45px;
         }
+
+      }
+    }
+
+  }
+
+  .ActivitiesGrid {
+    justify-content: center;
+    display: grid;
+    grid-gap: 1em;
+    grid-template-columns: 30% 30% 30%;
+    grid-template-rows: auto auto;
+    min-height: 20em;
+
+    grid-template-areas:
+      "steps sleep goals"
+      "steps sleep goals"
+      "steps colories goals"
+      "haert colories weight"
+      "haert colories weight";
+
+    .weight {
+      grid-area: weight;
+      @include activitiesBoard-1;
+      @include activitiesBoard-2;
+      height: 15vh;
+
+      &__weightIcons {
+        @include flexSpaceBetween;
+        padding: 2% 3%;
+      }
+
+      &--textWeght {
+        @include flexCenter;
+        margin-top: -11%;
+      }
+    }
+
+    .sleep {
+      grid-area: sleep;
+      background: linear-gradient(to bottom right, rgb(77, 53, 139) 50%, rgb(202, 54, 165) 100%);
+      color: white;
+      @include activitiesBoard-1;
+      height: 15vh;
+
+      &__sleepContent {
+
+        &__sleepIcons {
+          @include flexSpaceBetween;
+          padding: 3% 3%;
+
+          &--moonIcon {
+            background-color: $bgcolor;
+            border-radius: 50%;
+            color: black;
+            padding: 0.4%;
+          }
+        }
+
+        &__textHour {
+          padding-left: 3%;
+          padding-bottom: 5%;
+        }
+
+      }
+
+    }
+
+    .steps {
+      grid-area: steps;
+      @include activitiesBoard-1;
+      @include activitiesBoard-2;
+      height: 30vh;
+
+      &__stepsIcons {
+        padding: 2%;
+        @include flexSpaceBetween;
+      }
+
+      &__stepsContainer {
+
+        padding-top: 10%;
+
+        &__cercl {
+          @include flexCenter;
+
+          &--text {
+            position: absolute;
+          }
+
+        }
+
+        .animation {
+          -webkit-transform: rotate(-90deg);
+          transform: rotate(-90deg);
+
+          &__circleAnimation {
+            stroke-dasharray: 440;
+            stroke-dashoffset: 440;
+            -webkit-animation: html 6s ease-out forwards;
+            animation: html 6s ease-out forwards;
+          }
+
+          @-webkit-keyframes html {
+            to {
+              stroke-dashoffset: 170;
+            }
+          }
+
+          @keyframes html {
+            to {
+              stroke-dashoffset: 170;
+            }
+          }
+
+        }
+
+      }
+
+    }
+
+    .calories {
+      grid-area: colories;
+      @include activitiesBoard-1;
+      @include activitiesBoard-2;
+      height: 30vh;
+
+      &__caloriesIcons {
+        @include flexSpaceBetween;
+        padding: 3% 3%;
+      }
+
+      &__caloriesContainer {
+        padding-top: 8%;
+
+        &__cercl {
+          @include flexCenter;
+
+          &--text {
+            position: absolute;
+          }
+        }
+
+        .animation {
+          -webkit-transform: rotate(-90deg);
+          transform: rotate(-90deg);
+
+          &__circleAnimation {
+            stroke-dasharray: 440;
+            stroke-dashoffset: 440;
+            -webkit-animation: html 6s ease-out forwards;
+            animation: html 6s ease-out forwards;
+          }
+
+          @-webkit-keyframes html {
+            to {
+              stroke-dashoffset: 200;
+            }
+          }
+
+          @keyframes html {
+            to {
+              stroke-dashoffset: 200;
+            }
+          }
+
+        }
+
+      }
+
+    }
+
+    .goals {
+      grid-area: goals;
+      @include activitiesBoard-1;
+      @include activitiesBoard-2;
+      height: 30vh;
+
+      &__goalsIcons {
+        @include flexSpaceBetween;
+        padding: 3% 3%;
+      }
+
+      &__goalsDiagram {
+        @include flexSpaceEvenly;
+
+        &--text{
+          @include flexSpaceEvenly;
+        }
+
+        &__circl {
+          @include flexCenter;
+
+          &--Text {
+            position: absolute;
+          }
+        }
+
+        .animation {
+          -webkit-transform: rotate(-90deg);
+          transform: rotate(-90deg);
+
+          &__circleAnimation {
+            stroke-dasharray: 440;
+            stroke-dashoffset: 440;
+            -webkit-animation: html 6s ease-out forwards;
+            animation: html 6s ease-out forwards;
+          }
+
+          @-webkit-keyframes html {
+            to {
+              stroke-dashoffset: 170;
+            }
+          }
+
+          @keyframes html {
+            to {
+              stroke-dashoffset: 170;
+            }
+          }
+
+        }
+
+      }
+
+    }
+
+    .haert {
+      grid-area: haert;
+      @include activitiesBoard-1;
+      @include activitiesBoard-2;
+      height: 15vh;
+
+      &__heartIcons {
+        @include flexSpaceBetween;
+        padding: 2% 3%;
+      }
+
+      &__chart {
+        @include flexCenter;
+
+        &--bmp {
+          position: absolute;
+          left: 19.2%;
+        }
+
+        .bar-graph-vertical .bar-container {
+          float: left;
+          height: 10vh;
+          position: relative;
+          width: 2em;
+        }
+
+        .bar-graph-vertical .bar {
+          border-radius: 3px;
+          bottom: 1em;
+          position: absolute;
+          width: 0.4em;
+        }
+
+        .bar-graph-vertical .year {
+          -webkit-transform: rotate(90deg);
+          -moz-transform: rotate(90deg);
+          -o-transform: rotate(90deg);
+          -ms-transform: rotate(90deg);
+          transform: rotate(90deg);
+        }
+
+        .bar-graph-two .bar::after {
+          -webkit-transform: rotate(90deg);
+          -moz-transform: rotate(90deg);
+          -o-transform: rotate(90deg);
+          -ms-transform: rotate(90deg);
+          transform: rotate(90deg);
+        }
+
+        .bar-graph-two .bar-one .bar {
+          background-color: rgba(112, 19, 131, 0.747);
+          -webkit-animation: show-bar-one-vertical 2.5s 0.1s forwards;
+          -moz-animation: show-bar-one-vertical 2.5s 0.1s forwards;
+          animation: show-bar-one-vertical 2.5s 0.1s forwards;
+        }
+
+        .bar-graph-two .bar-two .bar {
+          background-color: rgb(243, 130, 239);
+          -webkit-animation: show-bar-two-vertical 2.5s 0.2s forwards;
+          -moz-animation: show-bar-two-vertical 2.5s 0.2s forwards;
+          animation: show-bar-two-vertical 2.5s 0.2s forwards;
+        }
+
+        .bar-graph-two .bar-three .bar {
+          background-color: rgb(243, 130, 239);
+          -webkit-animation: show-bar-three-vertical 2.5s 0.3s forwards;
+          -moz-animation: show-bar-three-vertical 2.5s 0.3s forwards;
+          animation: show-bar-three-vertical 2.5s 0.3s forwards;
+        }
+
+        .bar-graph-two .bar-four .bar {
+          background-color: rgba(112, 19, 131, 0.747);
+          -webkit-animation: show-bar-four-vertical 2.5s 0.4s forwards;
+          -moz-animation: show-bar-four-vertical 2.5s 0.4s forwards;
+          animation: show-bar-four-vertical 2.5s 0.4s forwards;
+        }
+
+        .bar-graph-two .bar-five .bar {
+          background-color: rgb(243, 130, 239);
+          -webkit-animation: show-bar-five-vertical 2.5s 0.5s forwards;
+          -moz-animation: show-bar-five-vertical 2.5s 0.5s forwards;
+          animation: show-bar-five-vertical 2.5s 0.5s forwards;
+        }
+
+        .bar-graph-two .bar-six .bar {
+          background-color: rgb(243, 130, 239);
+          -webkit-animation: show-bar-six-vertical 2.5s 0.6s forwards;
+          -moz-animation: show-bar-six-vertical 2.5s 0.6s forwards;
+          animation: show-bar-six-vertical 2.5s 0.6s forwards;
+        }
+
+        .bar-graph-two .bar-seven .bar {
+          background-color: rgba(112, 19, 131, 0.747);
+          -webkit-animation: show-bar-seven-vertical 2.5s 0.7s forwards;
+          -moz-animation: show-bar-seven-vertical 2.5s 0.7s forwards;
+          animation: show-bar-seven-vertical 2.5s 0.7s forwards;
+        }
+
+        .bar-graph-two .bar-eight .bar {
+          background-color: rgb(243, 130, 239);
+          -webkit-animation: show-bar-eight-vertical 25s 0.8s forwards;
+          -moz-animation: show-bar-eight-vertical 2.5s 0.8s forwards;
+          animation: show-bar-eight-vertical 2.5s 0.8s forwards;
+        }
+
+        @-webkit-keyframes show-bar-one-vertical {
+          0% {
+            height: 0;
+          }
+
+          100% {
+            height: 68%;
+          }
+        }
+
+        @-webkit-keyframes show-bar-two-vertical {
+          0% {
+            height: 0;
+          }
+
+          100% {
+            height: 55%;
+          }
+        }
+
+        @-webkit-keyframes show-bar-three-vertical {
+          0% {
+            height: 0;
+          }
+
+          100% {
+            height: 75%;
+          }
+        }
+
+        @-webkit-keyframes show-bar-four-vertical {
+          0% {
+            height: 0;
+          }
+
+          100% {
+            height: 50%;
+          }
+        }
+
+        @-webkit-keyframes show-bar-five-vertical {
+          0% {
+            height: 0;
+          }
+
+          100% {
+            height: 25%;
+          }
+        }
+
+        @-webkit-keyframes show-bar-six-vertical {
+          0% {
+            height: 0;
+          }
+
+          100% {
+            height: 95%;
+          }
+        }
+
+        @-webkit-keyframes show-bar-seven-vertical {
+          0% {
+            height: 0;
+          }
+
+          100% {
+            height: 82%;
+          }
+        }
+
+        @-webkit-keyframes show-bar-eight-vertical {
+          0% {
+            height: 0;
+          }
+
+          100% {
+            height: 37%;
+          }
+        }
+
+      }
+    }
+
+  }
+
+  .userBar {
+    @include flexCenter;
+    flex-direction: column;
+    gap: 1em;
+    padding-top: 1em;
+    padding-bottom: 1.2em;
   
+    &__DailyMeals {
+      @include flexSpaceBetween;
+      align-items: center;
+      @include activitiesBoard-2;
+      @include inputBar1024;
+      width: 93%;
+      border-radius: 10px;
+  
+      &--mealIcon {
+        margin-right: 2%;
       }
     }
   
+    &__info {
+      @include flexSpaceBetween;
+      align-items: center;
+      @include activitiesBoard-2;
+      @include inputBar1024;
+      width: 93%;
+      border-radius: 10px;
+  
+      &--alertIcon {
+  
+        background-color: $primarycolor1;
+        color: white;
+        border-radius: 50%;
+        margin-right: 2%;
+      }
+    }
   }
 
 }
@@ -86,8 +537,8 @@ html {
     border: none;
     margin: 0%;
     padding: 0%;
-  
-    .search {
+
+    &__search {
       width: 99%;
       margin-left: 2.5%;
 
@@ -103,64 +554,65 @@ html {
       }
     }
 
-  }
+    &__navBar {
+      &__list {
+        margin: 5% 3% 5% -3%;
 
-  .navBar {
-    &__list {
-      margin: 5% 3% 5% -3%;
-
-      &--link {
-        font-size: 1.2em;
-      }
-    }
-
-  }
-
-  .ActivitiesGrid {
-    grid-template-areas:
-      "steps sleep goals"
-      "steps sleep goals"
-      "steps colories goals"
-      "haert colories goals"
-      "haert colories goals";
-
-    weight {
-      display: none;
-    }
-
-    .haert {
-      &__chart {
-        @include flexCenter;
-
-        &--bmp {
-          position: absolute;
-          left: -5%;
-        }
-
-        .bar-graph-vertical .bar-container {
-          width: 1.3em;
+        &--link {
+          font-size: 1.2em;
         }
       }
 
     }
 
-    .goals {
-      height: 46.5vh;
+    .ActivitiesGrid {
+      grid-template-areas:
+        "steps sleep goals"
+        "steps sleep goals"
+        "steps colories goals"
+        "haert colories goals"
+        "haert colories goals";
 
-      &__goalsDiagram {
-        display: flex;
-        flex-direction: column;
+      weight {
+        display: none;
+      }
+
+      .haert {
+        &__chart {
+          @include flexCenter;
+
+          &--bmp {
+            position: absolute;
+            left: -5%;
+          }
+
+          .bar-graph-vertical .bar-container {
+            width: 1.3em;
+          }
+        }
+
+      }
+
+      .goals {
+        height: 46.5vh;
+
+        &__goalsDiagram {
+          display: flex;
+          flex-direction: column;
+        }
       }
     }
+
+    .userBar {
+      @include flexCenter;
+      flex-direction: column;
+      gap: 1.5em;
+      padding-top: 1.6em;
+      padding-bottom: 0em;
+    }
+
   }
 
-  .userBar {
-    @include flexCenter;
-    flex-direction: column;
-    gap: 1.5em;
-    padding-top: 1.6em;
-    padding-bottom: 0em;
-  }
 }
 
 @media only screen and (max-width: 540px) {
@@ -173,7 +625,7 @@ html {
     margin: none;
     padding: none;
 
-    .search {
+    &__search {
       width: 98%;
       margin-left: 2.5%;
 
@@ -187,9 +639,10 @@ html {
         top: 24%;
         left: 6%;
       }
+
     }
 
-    .navBar {
+    &__navBar {
       &__list {
 
         margin-left: -9%;
