--- a/01-HTML-CSS/09-animations/group7_Shay_Jhon_Omri/shay/style.scss
+++ b/01-HTML-CSS/09-animations/group7_Shay_Jhon_Omri/shay/style.scss
@@ -640,16 +640,19 @@ body {
             }
         }
     }
+}
 
+body{
+    background-color: #1d2a35;
 
     .details {
-        background: #1d2a35;
-        max-width: 600px;
+        max-width: 1280px;
         margin: auto;
         display: grid;
         grid-template-columns: 6fr;
         grid-template-rows: 0.8fr 1.6fr 0.8fr 0.3fr 1fr 0.8fr;
-        color: honeydew;
+        color: #e1e3e2;
+        
 
         &__location {
             margin-top: 20px;
@@ -663,6 +666,7 @@ body {
             }
 
             .fas {
+                
                 color: gray;
                 margin: auto;
             }
@@ -683,7 +687,7 @@ body {
                 width: 150px;
                 height: 150px;
                 border-radius: 100px;
-                background-image: linear-gradient(to bottom right, rgb(16, 176, 250), rgba(247, 0, 255, 0.932));
+                background-image: linear-gradient(to bottom right, #44a1fd, #f700ff);
                 margin: auto;
                 animation-name: rorate;
                 animation-duration: 3s;
@@ -742,7 +746,7 @@ body {
 
 
                     .fas {
-                        color: honeydew;
+                        color: #e1e3e2;
                         font-size: 12px;
                     }
 
@@ -757,10 +761,100 @@ body {
         .bar {
             display: flex;
             justify-content: space-around;
-            margin: 8%;
+            margin: 2%;
         }
 
     }
+
+    @media only screen and(max-width:1370px){
+        .details {
+
+           grid-template-rows: 0.8fr 1.6fr 0.8fr 0.3fr 2fr 0.8fr;
+
+           &__general {
+
+            margin: 5% 10%;
+        }
+
+        }
+    }
+
+    @media only screen and(max-width:1024px){
+        .details {
+
+           grid-template-rows: 0.8fr 1.6fr 0.8fr 0.3fr 2fr 0.8fr;
+
+           &__general {
+
+            margin: 5% 10%;
+        }
+
+        }
+    }
+
+    @media only screen and(max-width:770px){
+        .details {
+
+           grid-template-rows: 0.8fr 1.6fr 0.8fr 0.3fr 2fr 0.8fr;
+
+           .bar {
+
+            justify-content: space-around;
+            margin: 1%;
+        }
+
+        }
+    }
+
+    @media only screen and(max-width:600px){
+        .details {
+
+           grid-template-rows: 0.8fr 1.6fr 0.8fr 0.3fr 1fr 0.8fr;
+
+        }
+    }
+
+    @media only screen and(max-width:320px){
+        .details {
+
+            &__general {
+
+                margin: 0% 10%;
+            }
+
+            .bar {
+
+                justify-content: space-between;
+                margin: 5%;
+            }
+
+        }
+    }
+
+    @media only screen and(max-width:280px){
+        .details {
+
+            grid-template-rows: 0.8fr 1.6fr 0.8fr 0.3fr 1fr 0.3fr;
+
+            &__current {
+
+                gap: 5px;
+            }
+
+            &__general {
+
+                margin: 0% 5%;
+            }
+
+            .bar {
+
+                justify-content: space-between;
+                margin: 5%;
+            }
+
+        }
+    }
+}
 
     .wrapper {
         display: grid;
@@ -853,7 +947,7 @@ body {
         }
 
     }
-}
+
 
 @media only screen and(max-width:600px) {
     body {
@@ -1276,115 +1370,7 @@ body {
 
         }
 
-        .details {
-            background: rgba(19, 27, 36, 0.877);
-            max-width: 600px;
-            margin: auto;
-            display: grid;
-            grid-template-columns: 6fr;
-            grid-template-rows: 0.8fr 1.6fr 0.8fr 0.3fr 1fr 1fr;
-            color: honeydew;
-
-
-            &__location {
-                margin-top: 20px;
-                display: grid;
-                grid-template-rows: repeat(2 1fr);
-
-                .fas {
-                    color: gray;
-                    margin: auto;
-                }
-
-                p {
-                    justify-self: center;
-                    margin-top: -10px;
-                }
-
-            }
-
-            &__dayTime {
-                display: flex;
-                flex-direction: column;
-                //border: black solid 1px;
-
-                .ball {
-                    width: 150px;
-                    height: 150px;
-                    border-radius: 100px;
-                    background-image: linear-gradient(to bottom right, rgb(16, 176, 250), rgba(247, 0, 255, 0.932));
-                    margin: auto;
-                    animation-name: rorate;
-                    animation-duration: 3s;
-                    animation-delay: 1s;
-                    animation-iteration-count: infinite;
-                    animation-direction: reverse;
-                    animation-timing-function: ease-in-out;
-                }
-
-
-                .card {
-                    width: 100px;
-                    height: 20px;
-                    text-align: center;
-                    padding: 0.5%;
-                    border-radius: 40px;
-                    margin: auto;
-                    background: rgba(124, 49, 223, 0.295);
-                }
-            }
-
-            &__temp {
-                justify-self: center;
-                font-size: 3rem;
-            }
-
-            &__current {
-                display: flex;
-                justify-content: center;
-                gap: 30px;
-
-                .data {
-                    justify-content: center;
-
-                    span {
-                        margin-left: 10px;
-                    }
-                }
-
-                .fas {
-                    color: cornflowerblue;
-                }
-            }
-
-            &__general {
-                display: grid;
-                grid-template-columns: 1fr 1fr;
-                grid-template-rows: repeat(3 1fr);
-                margin: 0% 15%;
-
-                .measure {
-
-                    &_units {
-                        justify-self: end;
-                        color: rgb(51, 89, 158);
-
-                        .fas {
-                            color: honeydew;
-                            font-size: 12px;
-                        }
-
-                        span {
-                            margin-right: 10px;
-                        }
-                    }
-                }
-
-
-
-            }
-
-        }
+        
     }
 }
 
