--- a/01-HTML-CSS/09-animations/mishaschedule_v2/style3.scss
+++ b/01-HTML-CSS/09-animations/mishaschedule_v2/style3.scss
@@ -1,3 +1,9 @@
+// body,
+// html {
+//     margin: 0;
+//     padding: 0;
+// }
+////////////////KATYA ADDED!!////////////////
 // MIchael STARTs
 
 
