--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/style.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/style.scss
@@ -53,33 +53,34 @@
 }
 
 
-* {
+#bodystore {
     padding: 0;
     margin: 0;
     border: 0;
     box-sizing: border-box;
     transition: all 0.7s;
-
-}
-
-body {
     font-family: 'Barlow Condensed', sans-serif;
     overflow-x: hidden;
 }
 
-.blurwrapper{
+.body-active {
+    overflow-y: hidden;
+}
+
+.blurwrapper {
     position: fixed;
     height: 100vh;
     background-color: #000000a8;
     z-index: -3;
     width: 100vw;
 
-    &-active{
+    &-active {
         z-index: 5;
 
     }
 
 }
+
 // ---------- HOME -------  //
 
 
@@ -492,7 +493,7 @@ body {
     position: fixed;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     display: block;
     z-index: -5;
     display: flex;
@@ -500,13 +501,13 @@ body {
     align-items: center;
     flex-direction: column;
     color: #EBEBEB;
-    height: 90%; 
+    height: 90%;
 
-    &-active{
+    &-active {
         transition: opacity 1s;
         opacity: 1;
         z-index: 6;
-    }  
+    }
 
     &__x {
         font-size: 75px;
@@ -533,10 +534,15 @@ body {
             color: rgb(161, 161, 161);
             background-size: cover;
             background-image: url("http://en.fusushi.co.il/warehouse/temp/fu/popup.jpg");
+            background-position: center;
+            min-height: 700px;
 
-            
+            // &__wrapper{
+            //     position: fixed;
+            // }
 
             &__navbar {
+                // position: fixed;
                 height: 10%;
                 width: 900px;
                 display: flex;
@@ -696,39 +702,41 @@ body {
 }
 
 @media screen and (max-width: 1000px) {
-    .home{
-        &__title{
+    .home {
+        &__title {
             font-size: 50px;
         }
     }
-.menuopacity{
-    height: 200vh;
-    .menu {
 
-        justify-content: space-between;
+    .menuopacity {
+        height: 200vh;
 
-        &__box {
-            width: 900px;
-            height: 80%;
-            grid-template-columns: repeat(3, 1fr);
-            grid-template-rows: repeat(6, 1fr);
+        .menu {
+
+            justify-content: space-between;
+
+            &__box {
+                width: 900px;
+                height: 80%;
+                grid-template-columns: repeat(3, 1fr);
+                grid-template-rows: repeat(6, 1fr);
+            }
+
+            .picwrap {
+                img {
+                    height: 300px;
+                    width: 300px;
+                }
+            }
+
         }
-
-        .picwrap {
-          img{
-            height: 300px;
-            width: 300px;
-          }
-        }
-
     }
-}
 
 }
 
 @media screen and (max-width: 750px) {
-    .home{
-        &__title{
+    .home {
+        &__title {
             font-size: 40px;
         }
     }
