--- a/תרגול/08.02.22/noa/style.scss
+++ b/תרגול/08.02.22/noa/style.scss
@@ -1,7 +1,7 @@
 form {
     display: flex;
     flex-direction: column;
-    width: 80%;
+    width:400px;
     // background-color: aqua;
     margin: 10%;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -13,10 +13,10 @@ form {
 
     input {
         border: none;
-        box-shadow: 1px 0.5px 2px rgba(0, 0, 0, 0.678);
+        box-shadow: 1px 0.5px 2px rgba(0, 0, 0, 0.507);
         // border-bottom: 1px solid black;
         margin: 7px;
-        // width: 95%;
+        width:96%;
         border-radius: 3px;
 
         &[type="radio"] {
@@ -35,7 +35,6 @@ form {
     .name {
         display: flex;
         
-        
     }
 
     .radio {
@@ -53,7 +52,7 @@ form {
 
     .clear{
         box-shadow: 1px 0.5px 2px rgba(0, 0, 0, 0.678);
-        width: 50%;
+        width: 40%;
         align-self: center;
         background-color: rgb(49, 49, 194);  
         border-radius: 5px;
